# Parallel_amg_equation_solver

./: CMakeLists.txt  amg_solver.cpp  amg_solver.h  amg_solver_parallel.cpp  amg_solver_serial.cpp
